WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
135023
[REGRESSION WK2]The menu bar does not show up when tapping on the caret
https://bugs.webkit.org/show_bug.cgi?id=135023
Summary
[REGRESSION WK2]The menu bar does not show up when tapping on the caret
Enrica Casucci
Reported
2014-07-17 13:58:02 PDT
Tapping on an input field that has focus, should toggle the menu bar. <
rdar://problem/17617282
>
Attachments
Patch
(4.64 KB, patch)
2014-07-17 14:44 PDT
,
Enrica Casucci
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-07-17 14:44:54 PDT
Created
attachment 235093
[details]
Patch
Benjamin Poulain
Comment 2
2014-07-17 15:02:14 PDT
Comment on
attachment 235093
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=235093&action=review
> Source/WebKit2/WebProcess/WebPage/WebPage.cpp:739 > + VisiblePosition first(createLegacyEditingPosition(root, 0)); > + VisiblePosition last(createLegacyEditingPosition(root, root->childNodeCount())); > + result.hasContent = first != last;
This isn't exactly cheap. ContainerNode::childNodeCount() alone can dirty a ton of memory. I would prefer something that fails on the first node instead of going through all of them.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug