[REGRESSION WK2]The menu bar does not show up when tapping on the caret. https://bugs.webkit.org/show_bug.cgi?id=135023 <rdar://problem/17617282>

../WebCore:
Reviewed by Benjamin Poulain.

Adding some exports.

* WebCore.exp.in:

../WebKit2:
Reviewed by Benjamin Poulain and Ryosuke Niwa.

WKContentView needs to implement hasContent to correctly show
the appropriate menu bar content. The patch adds this information
to the EditorState.

* Shared/EditorState.cpp:
(WebKit::EditorState::encode):
(WebKit::EditorState::decode):
* Shared/EditorState.h:
(WebKit::EditorState::EditorState):
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView hasContent]):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::editorState):



Canonical link: https://commits.webkit.org/152946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171203 268f45cc-cd09-0410-ab3c-d52691b4dbfc