Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm
@@ -2438,7 +2438,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebAutocapitalizeType
 
 - (BOOL)hasContent
 {
-    return YES;
+    return _page->editorState().hasContent;
 }
 
 - (void)selectAll
